change title and icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>flstsvue</title>
+    <title>三羽谶</title>
+    <link rel="icon" type="image/x-icon" href="static/trifeather.png">
   </head>
   <body>
     <div id="app"></div>
